# internal/model/user.go
@@ -8,6 +8,7 @@ import (
 type User struct {
 	Id        uint   `gorm:"primarykey"`
 	UserId    string `gorm:"unique;not null"`
+	Username  string `gorm:"unique;not null"`
 	Nickname  string `gorm:"not null"`
 	Password  string `gorm:"not null"`
 	Email     string `gorm:"not null"`
